--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         </div>
                         <section class="relatorio-menu">
                             <div class="left-box">
-                                <button id="prodBtn" class="tipoBtn" onclick="produtosRel()">PRODUTOs</button>
+                                <button id="prodBtn" class="tipoBtn" onclick="produtosRel()">PRODUTOS</button>
                                 <button id="movBtn" class="tipoBtn" onclick="movimentoRel()">MOVIMENTAÇÃO</button>
                                 <button id="todosBtn" class="tipoBtn" onclick="todosRel()">TODOS</button>
                             </div>
